Regression: Geometry Nodes: Index of Nearest with any attribute in ID group input produce crashes #110037

Closed
opened 2023-07-13 01:38:14 +02:00 by AngryBearr · 0 comments

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-26 10:21, hash: 5e971e8d7f79
Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-24 06:34, hash: b621c6ba072a

Short description of error
Crash.

Exact steps for others to reproduce the error

  1. Point Cloud.
  2. Index of Nearest node in Geometry Nodes tree.
  3. Any attribute in Group ID input.

image

**Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-26 10:21, hash: `5e971e8d7f79` Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-24 06:34, hash: `b621c6ba072a` **Short description of error** Crash. **Exact steps for others to reproduce the error** 1. Point Cloud. 2. Index of Nearest node in Geometry Nodes tree. 3. Any attribute in Group ID input. ![image](/attachments/0f1927ed-dd42-4b54-a6fe-c673e3683ed2)
AngryBearr added the
Status
Needs Triage
Type
Report
Severity
Normal
labels 2023-07-13 01:38:14 +02:00
Iliya Katushenock self-assigned this 2023-07-13 01:42:58 +02:00
Iliya Katushenock changed title from index of nearest ID group crashes when used with repeat zone to Geometry Nodes: Index of Nearest with ID attribute in ID group input produce crashes 2023-07-13 01:48:27 +02:00
Iliya Katushenock changed title from Geometry Nodes: Index of Nearest with ID attribute in ID group input produce crashes to Geometry Nodes: Index of Nearest with any attribute in ID group input produce crashes 2023-07-13 01:50:56 +02:00
Iliya Katushenock changed title from Geometry Nodes: Index of Nearest with any attribute in ID group input produce crashes to Regression: Geometry Nodes: Index of Nearest with any attribute in ID group input produce crashes 2023-07-13 11:07:12 +02:00
Iliya Katushenock added
Severity
High
Type
Bug
and removed
Severity
Normal
Type
Report
labels 2023-07-13 11:07:20 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-14 14:09:10 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110037
No description provided.