Fix #110037: uninitialized result array and typos

Regression introduced in 2cfcb8b0b805401a0ffb252fd41750fadb0392ab.

Pull Request: https://projects.blender.org/blender/blender/pulls/110098